--- a/LungLife/lunglife_frontend/src/app/home/home.page.html
+++ b/LungLife/lunglife_frontend/src/app/home/home.page.html
@@ -23,7 +23,7 @@
 
       <!-- Action Button -->
       <div class="action-section">
-        <ion-button (click)="navigateToLogin()" color="primary" shape="round" size="large" expand="block">
+        <ion-button (click)="navigateToLogin()" color="primary" shape="round" size="large" expand="block" class="main-action-button">
           Continuar al Login
         </ion-button>
       </div>
